# ADS1x15-ADC

./: .gitignore  LICENCE  README.md  setup.cfg  setup.py
ADS1x15/: ADS1x15.py  __init__.py
examples/: ADS_comparator.py  ADS_continuous.py  ADS_differential.py  ADS_minimum.py  ADS_read.py  ADS_read_async.py  Rpi_ADC.py
