[metadata]
name = ADS1x15-ADC
version = 1.2.2
author = Chandra Wijaya Sentosa
author_email = chandra.w.sentosa@gmail.com
description = Python library used for ADS1x15 analog to digital converter (ADC)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chandrawi/ADS1x15-ADC
project_urls =
    Bug Tracker = https://github.com/chandrawi/ADS1x15-ADC/issues
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers

[options]
include_package_data = True
packages = 
    ADS1x15
python_requires = >=2.7
install_requires =
    smbus2
